cmake_minimum_required(VERSION 4.2)
project(Parking_Management_System_V_2_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(Parking_Management_System_V_2_0
        .idea/.gitignore
        .idea/modules.xml
        .idea/Parking-Management-System-V_2.0.iml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp
        README.md)
